k8s/flux/apps/navidrome/NetworkPolicies.yaml
# Netzwerkregeln im Namespace `navidrome`
---
# Eingehend nur von ingress-internal
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-internal
  namespace: navidrome
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-internal
      ports:
        - protocol: TCP
          port: 4533
